<resources>
    <string name="app_name">Movies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="content_authority">me.leofontes.movies.provider</string>

    <string name="action_settings">Settings</string>

    <string name="action_menu_popular">Most Popular</string>
    <string name="action_menu_rating">Highest Rated</string>
    <string name="action_menu_about">About</string>
    <string name="action_menu_favorite">Favorites</string>
    <string name="section_menu_dev">Development</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ABOUT -->
    <string name="about_developer">Developed in:</string>
    <string name="about_name_developer">Laboratório Bridge</string>
    <string name="about_author">By:</string>
    <string name="about_myname" translatable="false">Leonardo Fontes</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>

    <!-- DETAIL ACTIVITY -->
    <string name="detail_label_synopsis">Synopsis</string>
    <string name="detail_label_user_rating">User Rating</string>
    <string name="detail_label_release_date">Release Date</string>
    <string name="detail_button_add_favorite">save favorite</string>
    <string name="detail_button_remove_favorite">remove favorite</string>
    <string name="detail_label_reviews">Reviews</string>
    <string name="detail_label_trailers">Trailers</string>

    <!-- REVIEWS -->
    <string name="review_base_number">Review</string>
    <string name="review_base_author">by</string>

    <!-- VIDEOS -->
    <string name="video_base_number">Trailer</string>

    <!-- TOASTS -->
    <string name="error_no_internet">Looks like you dont have Internet :(</string>
    <string name="toast_added_favorite">Added to your favorites</string>
    <string name="error_removed_favorite">Could not remove from favorites, please try again later</string>
    <string name="toast_removed_favorite">Removed from your favorites</string>
    <string name="title_activity_about">About us</string>

    <!-- UPCOMING -->
    <string name="nav_upcoming">Upcoming</string>
</resources>
