<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_favorite"
            android:title="@string/action_menu_popular" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_arrow_upward"
            android:title="@string/action_menu_rating" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_grade"
            android:title="@string/action_menu_favorite"
            />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_trending_up"
            android:title="@string/nav_upcoming"
            />
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/section_menu_dev">
            <menu>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_face"
                    android:title="@string/action_menu_about" />
            </menu>
        </item>
    </group>

</menu>
