<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.leofontes.movies.About"
    android:background="@color/defaultRed">

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/defaultRed">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_title"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageview_logo"
            android:layout_margin="10sp" />

        <TextView
            android:text="@string/about_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_developed"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/defaultGray"
            android:textAlignment="center" />

        <TextView
            android:text="@string/about_name_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_developer_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>
